...
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/etHortalizas"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
...

            <EditText
                android:id="@+id/etFruta"
                android:layout_width="150dp"
                android:layout_height="50dp"
...
                android:textColorHint="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@id/etCereales"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
...
                android:textColorHint="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@id/etLeche"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
...
                android:textColorHint="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@id/etHuevos"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
...
                android:textColorHint="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@id/etFrutosSecos"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
...
                android:textColorHint="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@id/etDulces"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
...
                android:textColorHint="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@id/etPescado"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
...
                android:textColorHint="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@id/etMarisco"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
...
                android:textColorHint="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@id/etAceite"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
...
                android:textColorHint="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@id/etPavo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
...
                android:textColorHint="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@id/etPollo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
...
                android:textColorHint="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@id/etCerdo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
...
                android:textColorHint="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@id/etTernera"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
...
                android:textColorHint="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@id/etCerveza"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
...
                android:textColorHint="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@id/etRefrescos"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
...
                android:textColorHint="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@id/etLicores"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
...
                android:textColorHint="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@id/etVino"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
...
