...
                android:text="@string/yes"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:value="false" />

            <RadioButton
                android:id="@+id/rbNoCar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/grey_100"
                android:fontFamily="@font/poppins_semibold"
                android:tag="2.0"
                android:text="@string/no"
...
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/pregunta_generica_transporte2"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/radioGroupTipoCar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:category="type_car"
            android:tag="type_car">

            <RadioButton
                android:id="@+id/rbUtilitario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/grey_100"
                android:fontFamily="@font/poppins_semibold"
                android:tag="0.0"
                android:text="@string/repuestas_rb_transporte3"
...
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/pregunta_generica_transporte3"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/radioGroupTipoCombustibleCar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:category="type_car"
            android:tag="type_car">

            <RadioButton
                android:id="@+id/rbGasolinaCar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/grey_100"
                android:fontFamily="@font/poppins_semibold"
                android:tag="0.0"
                android:text="@string/repuestas_rb_transporte11"
...
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/pregunta_generica_transporte4"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etConsumoLitrosCar"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/input"
            android:textCursorDrawable="@drawable/text_cursor"
...
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/pregunta_generica_transporte10"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etCantidadKmCar"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/input"
            android:textCursorDrawable="@drawable/text_cursor"
...
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/pregunta_generica_transporte5"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/radioGroupPropMoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:category="owned_moto"
...
                android:text="@string/yes"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:value="false" />

            <RadioButton
                android:id="@+id/rbNoMoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/grey_100"
                android:fontFamily="@font/poppins_semibold"
                android:tag="2.0"
                android:text="@string/no"
...
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/pregunta_generica_transporte6"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/radioGroupCC_Moto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:category="type_car"
            android:tag="type_car">

            <RadioButton
                android:id="@+id/rbCCmenos125"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/grey_100"
                android:fontFamily="@font/poppins_semibold"
                android:tag="0.0"
                android:text="@string/repuestas_rb_transporte17"
...
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/pregunta_generica_transporte7"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/radioGroupTipoCombustibleMoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:category="type_car"
            android:tag="type_car">

            <RadioButton
                android:id="@+id/rbGasolinaMoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/grey_100"
                android:fontFamily="@font/poppins_semibold"
                android:tag="0.0"
                android:text="@string/repuestas_rb_transporte21"
...
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/pregunta_generica_transporte8"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etConsumoLitrosMoto"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/input"
            android:textCursorDrawable="@drawable/text_cursor"
...
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/pregunta_generica_transporte10"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etCantidadKmMoto"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/input"
            android:textCursorDrawable="@drawable/text_cursor"
...
