...
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteY="0dp" />

            <EditText
                android:id="@+id/etPantalon"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/input"
                android:textCursorDrawable="@drawable/text_cursor"
                android:fontFamily="@font/poppins_semibold"
...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ropa1"
                tools:layout_editor_absoluteX="12dp"
                tools:layout_editor_absoluteY="58dp" />

            <EditText
                android:id="@+id/etOtrosPantalones"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="12dp"
                android:background="@drawable/input"
                android:textCursorDrawable="@drawable/text_cursor"
                android:fontFamily="@font/poppins_semibold"
                android:inputType="number"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@id/etCamisas"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/ropa2"
                app:layout_constraintTop_toBottomOf="@+id/etPantalon" />

            <TextView
...
                android:textCursorDrawable="@drawable/text_cursor"
                android:fontFamily="@font/poppins_semibold"
                android:inputType="number"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@id/etCamisetas"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/ropa3"
                app:layout_constraintTop_toBottomOf="@+id/etOtrosPantalones" />

            <TextView
...
                android:textCursorDrawable="@drawable/text_cursor"
                android:fontFamily="@font/poppins_semibold"
                android:inputType="number"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@id/etVestidos"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/ropa4"
                app:layout_constraintTop_toBottomOf="@+id/etCamisas" />

            <TextView
...
                android:textCursorDrawable="@drawable/text_cursor"
                android:fontFamily="@font/poppins_semibold"
                android:inputType="number"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@id/etCalcetines"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/ropa5"
                app:layout_constraintTop_toBottomOf="@+id/etCamisetas" />

            <TextView
...
                android:textCursorDrawable="@drawable/text_cursor"
                android:fontFamily="@font/poppins_semibold"
                android:inputType="number"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@id/etChaquetas"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/ropa6"
                app:layout_constraintTop_toBottomOf="@+id/etVestidos" />

            <TextView
...
                android:textCursorDrawable="@drawable/text_cursor"
                android:fontFamily="@font/poppins_semibold"
                android:inputType="number"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@id/etAbrigos"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/ropa7"
                app:layout_constraintTop_toBottomOf="@+id/etCalcetines" />

            <TextView
...
                android:textCursorDrawable="@drawable/text_cursor"
                android:fontFamily="@font/poppins_semibold"
                android:inputType="number"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@id/etJerseys"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/ropa8"
                app:layout_constraintTop_toBottomOf="@+id/etChaquetas" />

            <TextView
...
                android:textCursorDrawable="@drawable/text_cursor"
                android:fontFamily="@font/poppins_semibold"
                android:inputType="number"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@id/etZapatos"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/ropa9"
                app:layout_constraintTop_toBottomOf="@+id/etAbrigos" />

            <TextView
...
                android:textCursorDrawable="@drawable/text_cursor"
                android:fontFamily="@font/poppins_semibold"
                android:inputType="number"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@id/etZapatillasDeportivas"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/ropa10"
                app:layout_constraintTop_toBottomOf="@+id/etJerseys" />

            <TextView
...
                android:textCursorDrawable="@drawable/text_cursor"
                android:fontFamily="@font/poppins_semibold"
                android:inputType="number"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@id/etRopaInterior"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/ropa11"
                app:layout_constraintTop_toBottomOf="@+id/etZapatos" />


...
