...
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteY="0dp" />

            <EditText
                android:id="@+id/etUdsPC"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/input"
                android:textCursorDrawable="@drawable/text_cursor"
                android:fontFamily="@font/poppins_semibold"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.621"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etYearPC"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/input"
                android:textCursorDrawable="@drawable/text_cursor"
                android:fontFamily="@font/poppins_semibold"
...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tecnologia1"
                tools:layout_editor_absoluteX="12dp"
                tools:layout_editor_absoluteY="58dp" />

            <EditText
                android:id="@+id/etUdsLaptop"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="12dp"
                android:background="@drawable/input"
                android:textCursorDrawable="@drawable/text_cursor"
...
                android:hint="Uds."
                android:inputType="number"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@id/etUdsTablets"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.486"
                app:layout_constraintStart_toEndOf="@+id/tecnologia2"
                app:layout_constraintTop_toBottomOf="@+id/etUdsPC" />

            <EditText
                android:id="@+id/etYearLaptop"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginTop="65dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/input"
                android:textCursorDrawable="@drawable/text_cursor"
...
                android:hint="Uds."
                android:inputType="number"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@id/etUdsMobile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.483"
                app:layout_constraintStart_toEndOf="@+id/tecnologia3"
                app:layout_constraintTop_toBottomOf="@+id/etUdsLaptop" />

            <EditText
                android:id="@+id/etYearTablets"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginTop="129dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/input"
                android:textCursorDrawable="@drawable/text_cursor"
...
                android:hint="Uds."
                android:inputType="number"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@id/etUdsRouter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.479"
                app:layout_constraintStart_toEndOf="@+id/tecnologia4"
                app:layout_constraintTop_toBottomOf="@+id/etUdsTablets" />

            <EditText
                android:id="@+id/etYearMobile"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginTop="195dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/input"
                android:textCursorDrawable="@drawable/text_cursor"
...
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tecnologia5"
                app:layout_constraintTop_toBottomOf="@+id/etUdsMobile" />

            <EditText
                android:id="@+id/etYearRouter"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginTop="261dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/input"
                android:textCursorDrawable="@drawable/text_cursor"
...
